# unofficial-api-for-spankbang

./: README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
README/: Changelog.md
spankbang_api/: __init__.py  api.py  spankbang_api.py
spankbang_api/modules/: consts.py  errors.py
spankbang_api/tests/: test_channel.py  test_search.py  test_video.py
